Support proxying Heat API by using x-forwarded-for header
Adding 'X-Forwarded-For' header support to enable  Heat API
proxying

Implements: blueprint proxying-heat-api
Change-Id: I36a0d3dd3f672a485c4a9c0cd541b705033e9025

--- a/etc/heat/heat.conf.sample
+++ b/etc/heat/heat.conf.sample
@@ -11,6 +11,15 @@
 
 
 #
+# Options defined in heat.api.middleware.x_forwarded_for
+#
+
+# The HTTP header that will be used as remote address. (string
+# value)
+#forward_header_name=X-Forwarded-For
+
+
+#
 # Options defined in heat.common.config
 #
 
