--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,7 @@ commands =
     flake8 heat bin/heat-api bin/heat-api-cfn bin/heat-api-cloudwatch bin/heat-engine bin/heat-manage contrib
     # disable check_uptodate until a resolution is found to bug #1288586
     #{toxinidir}/tools/config/check_uptodate.sh
+    {toxinidir}/tools/requirements_style_check.sh requirements.txt test-requirements.txt
 
 [testenv:venv]
 commands = {posargs}
