Fix timeout for stack actions
The problem is that the timeout for running any action (i.e. create or update)
on stack is not passed from parent stack to nested stack.
All heat resources which are internally implemented as StackResource are
affected. For example AutoScalingGroup always using default timeout
(60 minutes). If creating any of the instances will take more that it will
fail no matter what timeout you will pass creating stack.

Changes:
* removes hardcoded timeout (60 minutes)
* adds new config option to specify timeout for stack action
* if timeout was not specified for nested stack then timeout from parent
  is used
* adds test for StackResource and parser.Stack

Change-Id: I39494b75774988c625cb22cc7873d628c04d3228
Closes-Bug: 1287719

--- a/etc/heat/heat.conf.sample
+++ b/etc/heat/heat.conf.sample
@@ -58,6 +58,10 @@
 # unlimited events per stack. (integer value)
 #max_events_per_stack=1000
 
+# Timeout in seconds for stack action (ie. create or update).
+# (integer value)
+#stack_action_timeout=3600
+
 # RPC timeout for the engine liveness check that is used for
 # stack locking. (integer value)
 #engine_life_check_timeout=2
