Check that all po/pot files are valid
Perform minimal checks on po and pot files so that no broken files can
get imported.

Change-Id: Ib438faddb362eb8e61eaa64a870160196f16c594
Related-Bug: #1299349
Co-Authored-By: Clark Boylan <clark.boylan@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -12,12 +12,16 @@ deps = -r{toxinidir}/requirements.txt
 commands =
   python setup.py testr --slowest --testr-args='{posargs}'
 
+whitelist_externals = bash
+
 [testenv:pep8]
 commands =
     flake8 heat bin/heat-api bin/heat-api-cfn bin/heat-api-cloudwatch bin/heat-engine bin/heat-manage contrib
     # disable check_uptodate until a resolution is found to bug #1288586
     #{toxinidir}/tools/config/check_uptodate.sh
     {toxinidir}/tools/requirements_style_check.sh requirements.txt test-requirements.txt
+    # Check that .po and .pot files are valid:
+    bash -c "find heat -type f -regex '.*\.pot?' -print0|xargs -0 -n 1 msgfmt --check-format -o /dev/null"
 
 [testenv:venv]
 commands = {posargs}
