--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,8 @@ commands =
 [testenv:pep8]
 commands =
     flake8 heat bin/heat-api bin/heat-api-cfn bin/heat-api-cloudwatch bin/heat-engine bin/heat-manage
-    {toxinidir}/tools/conf/check_uptodate.sh
+    # disable check_uptodate until a resolution is found to bug #1288586
+    #{toxinidir}/tools/conf/check_uptodate.sh
 
 [testenv:venv]
 commands = {posargs}
