--- a/tox.ini
+++ b/tox.ini
@@ -40,9 +40,9 @@ commands = python setup.py build_sphinx
 [flake8]
 # H201 no 'except:' at least use 'except Exception:'
 # H302 import only modules.'bla..' does not import a module
-# H306 imports not in alphabetical order
 # H404 multi line docstring should start with a summary
-ignore = H201,H302,H306,H404,H803
+# H803 no full stop at the end of the commit message
+ignore = H201,H302,H404,H803
 show-source = true
 builtins = _
 exclude=.venv,.git,.tox,dist,*openstack/common*,*lib/python*,*egg,tools,build
