--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ oslo.config>=1.2.0
 paramiko>=1.9.0
 PasteDeploy>=1.5.0
 pbr>=0.6,!=0.7,<1.0
+posix_ipc
 pycrypto>=2.6
 python-ceilometerclient>=1.0.6
 python-cinderclient>=1.0.6
