Distribute create_heat_domain
Rename it to heat-keystone-setup-domain and ship it in bin with the
other helper scripts. This will make it consumable by automated systems
and packaging.

Change-Id: I7914869377cd08b6201007aa0eb6b8a70d763254

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ scripts =
     bin/heat-db-setup
     bin/heat-engine
     bin/heat-keystone-setup
+    bin/heat-keystone-setup-domain
     bin/heat-manage
 
 [global]
