Add glanceclient to heat
To enable implementation of a glance image resource, we first need to add
access to glanceclient in heat.

Change-Id: Ie0623e0307f6d3163ae584ceab89453f71f48053
Implements: blueprint glance-image

--- a/etc/heat/heat.conf.sample
+++ b/etc/heat/heat.conf.sample
@@ -698,6 +698,33 @@
 #insecure=false
 
 
+[clients_glance]
+
+#
+# Options defined in heat.common.config
+#
+
+# Type of endpoint in Identity service catalog to use for
+# communication with the OpenStack service. (string value)
+#endpoint_type=publicURL
+
+# Optional CA cert file to use in SSL connections. (string
+# value)
+#ca_file=<None>
+
+# Optional PEM-formatted certificate chain file. (string
+# value)
+#cert_file=<None>
+
+# Optional PEM-formatted file that contains the private key.
+# (string value)
+#key_file=<None>
+
+# If set, then the server's certificate will not be verified.
+# (boolean value)
+#insecure=false
+
+
 [clients_nova]
 
 #
