--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ posix_ipc
 pycrypto>=2.6
 python-ceilometerclient>=1.0.6
 python-cinderclient>=1.0.6
+python-glanceclient>=0.9.0
 python-heatclient>=0.2.3
 python-keystoneclient>=0.7.0
 python-neutronclient>=2.3.4,<3
