Revert "Support ... x-forwarded-for header"
This reverts commit e3679217d1d4b1821f4fa0bd9894b761edfe4ba9.

This commit broke using the heat API when client requests were
behind a proxy (this sets the X-Forwarded-For header)
and effectively causes the heat-api to return the clients
IP address back in the request via the location header.

I believe the original (unapproved) heat blueprint for
this feature should have used X-Forwarded-Host instead.

Closes-bug: #1316754

Change-Id: I1b38ececf59545a3c13c7ebf2c33be97f4332ac0

--- a/etc/heat/api-paste.ini
+++ b/etc/heat/api-paste.ini
@@ -1,7 +1,7 @@
 
 # heat-api pipeline
 [pipeline:heat-api]
-pipeline = faultwrap ssl xforwardedfor versionnegotiation authurl authtoken context apiv1app
+pipeline = faultwrap ssl versionnegotiation authurl authtoken context apiv1app
 
 # heat-api pipeline for standalone heat
 # ie. uses alternative auth backend that authenticates users against keystone
@@ -12,7 +12,7 @@ pipeline = faultwrap ssl xforwardedfor versionnegotiation authurl authtoken cont
 #   flavor = standalone
 #
 [pipeline:heat-api-standalone]
-pipeline = faultwrap ssl xforwardedfor versionnegotiation authurl authpassword context apiv1app
+pipeline = faultwrap ssl versionnegotiation authurl authpassword context apiv1app
 
 # heat-api pipeline for custom cloud backends
 # i.e. in heat.conf:
@@ -20,7 +20,7 @@ pipeline = faultwrap ssl xforwardedfor versionnegotiation authurl authpassword c
 #   flavor = custombackend
 #
 [pipeline:heat-api-custombackend]
-pipeline = faultwrap xforwardedfor versionnegotiation context custombackendauth apiv1app
+pipeline = faultwrap versionnegotiation context custombackendauth apiv1app
 
 # heat-api-cfn pipeline
 [pipeline:heat-api-cfn]
@@ -33,12 +33,12 @@ pipeline = cfnversionnegotiation ec2authtoken context apicfnv1app
 
 # heat-api-cloudwatch pipeline
 [pipeline:heat-api-cloudwatch]
-pipeline = xforwardedfor versionnegotiation ec2authtoken authtoken context apicwapp
+pipeline = versionnegotiation ec2authtoken authtoken context apicwapp
 
 # heat-api-cloudwatch pipeline for standalone heat
 # relies exclusively on authenticating with ec2 signed requests
 [pipeline:heat-api-cloudwatch-standalone]
-pipeline = xforwardedfor versionnegotiation ec2authtoken context apicwapp
+pipeline = versionnegotiation ec2authtoken context apicwapp
 
 [app:apiv1app]
 paste.app_factory = heat.common.wsgi:app_factory
@@ -51,10 +51,6 @@ heat.app_factory = heat.api.cfn.v1:API
 [app:apicwapp]
 paste.app_factory = heat.common.wsgi:app_factory
 heat.app_factory = heat.api.cloudwatch:API
-
-[filter:xforwardedfor]
-paste.filter_factory = heat.common.wsgi:filter_factory
-heat.filter_factory = heat.api.openstack:x_forwarded_for_middleware_filter
 
 [filter:versionnegotiation]
 paste.filter_factory = heat.common.wsgi:filter_factory
