--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,11 @@ scripts =
     bin/heat-keystone-setup-domain
     bin/heat-manage
 
+[entry_points]
+oslo.config.opts =
+    heat.common.config = heat.common.config:list_opts
+    heat.common.wsgi = heat.common.wsgi:list_opts
+
 [global]
 setup-hooks =
     pbr.hooks.setup_hook
