--- a/tox.ini
+++ b/tox.ini
@@ -17,8 +17,7 @@ whitelist_externals = bash
 [testenv:pep8]
 commands =
     flake8 heat bin/heat-api bin/heat-api-cfn bin/heat-api-cloudwatch bin/heat-engine bin/heat-manage contrib
-    # disable check_uptodate until a resolution is found to bug #1288586
-    #{toxinidir}/tools/config/check_uptodate.sh
+    {toxinidir}/tools/config/check_uptodate.sh
     {toxinidir}/tools/requirements_style_check.sh requirements.txt test-requirements.txt
     # Check that .po and .pot files are valid:
     bash -c "find heat -type f -regex '.*\.pot?' -print0|xargs -0 -n 1 msgfmt --check-format -o /dev/null"
