Fix default template for AWS::CloudWatch::Alarm with Ceilometer
Existing template assumes certain parameters to be delimited
strings rather than lists and uses 'Fn::Split' to convert them
to list. However, delimitedstring representations of parameters
are by default converted to list for CommaDelimitedList types.
Also includes change for CommaDelimitedList to accept empty string.

Change-Id: Ib566f1d098c575a80c4f1a975eaaaac93d70af34
Closes-Bug: #1316842

--- a/etc/heat/templates/AWS_CloudWatch_Alarm.yaml
+++ b/etc/heat/templates/AWS_CloudWatch_Alarm.yaml
@@ -73,14 +73,14 @@ Resources:
       threshold:
         Ref: Threshold
       alarm_actions:
-        "Fn::Split": [",", {Ref: AlarmActions}]
+        Ref: AlarmActions
       ok_actions:
-        "Fn::Split": [",", {Ref: OKActions}]
+        Ref: OKActions
       insufficient_data_actions:
-        "Fn::Split": [",", {Ref: InsufficientDataActions}]
+        Ref: InsufficientDataActions
       statistic:
         "Fn::FindInMap": [StatisticMap, {Ref: Statistic}, Ceilometer]
       comparison_operator:
         "Fn::FindInMap": [ComparisonOperatorMap, {Ref: ComparisonOperator}, Ceilometer]
       matching_metadata:
-        "Fn::MemberListToMap": [Name, Value, {"Fn::Split": [",", {Ref: Dimensions}]}]
+        "Fn::MemberListToMap": [Name, Value, {Ref: Dimensions}]
