Implement glance client plugin
This moves the client creation code out of Clients._glance() into
its own client plugin.

Glance is a core project, and python-glanceclient is a dependency,
so the import is now mandatory.

Change-Id: If61f2510344bf67b7e9aded1dc9d9cedf2426228

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ oslo.config.opts =
     heat.common.wsgi = heat.common.wsgi:list_opts
 
 heat.clients =
+    glance = heat.engine.clients.os.glance:GlanceClientPlugin
     nova = heat.engine.clients.os.nova:NovaClientPlugin
     swift = heat.engine.clients.os.swift:SwiftClientPlugin
 
