Implement neutron client plugin
This moves the client creation code out of Clients._neutron() into
its own client plugin.

Neutron is an integrated project, and python-neutronclient is a dependency,
so the import is now mandatory. Also any conditional code which skipped
if the neutron client was missing has been removed, since the presense or
absense of an installed neutronclient has no bearing on whether neutron
is installed on a given cloud.

Change-Id: Id9fdc50e80efe78731e21934ed9f2704cc3eb408

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ oslo.config.opts =
 heat.clients =
     glance = heat.engine.clients.os.glance:GlanceClientPlugin
     nova = heat.engine.clients.os.nova:NovaClientPlugin
+    neutron = heat.engine.clients.os.neutron:NeutronClientPlugin
     swift = heat.engine.clients.os.swift:SwiftClientPlugin
 
 heat.constraints =
