--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ oslo.config.opts =
     heat.common.wsgi = heat.common.wsgi:list_opts
 
 heat.clients =
+    cinder = heat.engine.clients.os.cinder:CinderClientPlugin
     glance = heat.engine.clients.os.glance:GlanceClientPlugin
     nova = heat.engine.clients.os.nova:NovaClientPlugin
     neutron = heat.engine.clients.os.neutron:NeutronClientPlugin
