Implement trove client plugin
This moves the client creation code out of Clients._trove() into
its own client plugin.

Trove is an integrated project, and python-troveclient is a dependency,
so the import is now mandatory.

Change-Id: I89d290f6a38488779e77ff11bdfdd64c159a57e8

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,7 @@ heat.clients =
     nova = heat.engine.clients.os.nova:NovaClientPlugin
     neutron = heat.engine.clients.os.neutron:NeutronClientPlugin
     swift = heat.engine.clients.os.swift:SwiftClientPlugin
+    trove = heat.engine.clients.os.trove:TroveClientPlugin
 
 heat.constraints =
     nova.flavor = heat.engine.resources.server:FlavorConstraint
