Implement ceilometer client plugin
This moves the client creation code out of Clients._ceilometer() into
its own client plugin.

Ceilometer is an integrated project, and python-ceilometerclient
is a dependency, so the import is now mandatory.

Change-Id: Id4961c4d9678d7bfe3739128843c41921cc8a34b

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ oslo.config.opts =
     heat.common.wsgi = heat.common.wsgi:list_opts
 
 heat.clients =
+    ceilometer = heat.engine.clients.os.ceilometer:CeilometerClientPlugin
     cinder = heat.engine.clients.os.cinder:CinderClientPlugin
     glance = heat.engine.clients.os.glance:GlanceClientPlugin
     nova = heat.engine.clients.os.nova:NovaClientPlugin
