Implement heat client plugin
This moves the client creation code out of Clients._heat() into
its own client plugin.

Clients._get_client_option is no longer used, so has been deleted

Change-Id: Ie14906b6cc605d6db49a5153ffa27f82debcc430

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ heat.clients =
     ceilometer = heat.engine.clients.os.ceilometer:CeilometerClientPlugin
     cinder = heat.engine.clients.os.cinder:CinderClientPlugin
     glance = heat.engine.clients.os.glance:GlanceClientPlugin
+    heat = heat.engine.clients.os.heat_plugin:HeatClientPlugin
     nova = heat.engine.clients.os.nova:NovaClientPlugin
     neutron = heat.engine.clients.os.neutron:NeutronClientPlugin
     swift = heat.engine.clients.os.swift:SwiftClientPlugin
