--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ heat.clients =
     cinder = heat.engine.clients.os.cinder:CinderClientPlugin
     glance = heat.engine.clients.os.glance:GlanceClientPlugin
     heat = heat.engine.clients.os.heat_plugin:HeatClientPlugin
+    keystone = heat.engine.clients.os.keystone:KeystoneClientPlugin
     nova = heat.engine.clients.os.nova:NovaClientPlugin
     neutron = heat.engine.clients.os.neutron:NeutronClientPlugin
     swift = heat.engine.clients.os.swift:SwiftClientPlugin
