Port rackspace clients to client plugins
This change converts the rackspace client code to be contributed
via client plugins. This is the last change required for all in-tree
clients to be contributed via plugins.

A RackspaceTest base class which adds the rackspace directory
to the client plugins path which ensures any rackspace variants
are loaded. Plugin loading precedence is used to ensure rackspace
versions will override core plugins with the same name.

The nova plugin will fallback to returning the core nova client
so that CloudServersTest will run even when pyrax is not installed.

The cloud_backed configuration option will no longer have any effect
on whether rackspace clients will be loaded. Instead they will be loaded
by stevedore via the setup.cfg heat.clients entry point.

Change-Id: I312de40064cc00896dba1835117ff67003e57938

--- a/contrib/rackspace/setup.cfg
+++ b/contrib/rackspace/setup.cfg
@@ -18,9 +18,25 @@ classifier =
     Programming Language :: Python :: 2.6
 
 [files]
-# Copy to /usr/lib/heat for plugin loading
+packages =
+    rackspace
+
+# Copy to /usr/lib/heat for non-stevedore plugin loading
 data_files =
     lib/heat/rackspace = rackspace/resources/*
+
+[entry_points]
+
+heat.clients =
+    auto_scale = rackspace.clients:RackspaceAutoScaleClient
+    cinder = rackspace.clients:RackspaceCinderClient
+    cloud_dns = rackspace.clients:RackspaceCloudDNSClient
+    cloud_lb = rackspace.clients:RackspaceCloudLBClient
+    cloud_networks = rackspace.clients:RackspaceCloudNetworksClient
+    glance = rackspace.clients:RackspaceGlanceClient
+    nova = rackspace.clients:RackspaceNovaClient
+    trove = rackspace.clients:RackspaceTroveClient
+    swift = rackspace.clients:RackspaceSwiftClient
 
 [global]
 setup-hooks =
