Move glance_utils functions to glance client plugin
The glance client plugin is a more obvious home for this sort
of function, and this change makes mocking of these functions
much easier since a mocked client is no longer needed.

To access the methods defined in the client plugin the method
Resource.client_plugin has been added. When all clients are
contributed by plugins then method Resource.client will call
Resource.client_plugin.

glance_utils can be deleted since it was only added at the
beginning of the Juno cycle.

The image constraint has also been moved to the glance plugin.

Change-Id: Id31ccd605411ca034addc67d8aadf7cea0904bfd

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,7 @@ heat.clients =
 heat.constraints =
     nova.flavor = heat.engine.resources.server:FlavorConstraint
     neutron.network = heat.engine.clients.os.neutron:NetworkConstraint
-    glance.image = heat.engine.resources.image:ImageConstraint
+    glance.image = heat.engine.clients.os.glance:ImageConstraint
     iso_8601 = heat.engine.resources.iso_8601:ISO8601Constraint
     nova.keypair = heat.engine.resources.nova_keypair:KeypairConstraint
 
