--- a/setup.cfg
+++ b/setup.cfg
@@ -50,7 +50,7 @@ heat.clients =
 
 heat.constraints =
     nova.flavor = heat.engine.resources.server:FlavorConstraint
-    neutron.network = heat.engine.resources.neutron.net:NetworkConstraint
+    neutron.network = heat.engine.clients.os.neutron:NetworkConstraint
     glance.image = heat.engine.resources.image:ImageConstraint
     iso_8601 = heat.engine.resources.iso_8601:ISO8601Constraint
     nova.keypair = heat.engine.resources.nova_keypair:KeypairConstraint
