Implement sahara client plugin
Sahara is an integrated project, so python-saharaclient is added
to requirements.txt and saharaclient imports are mandatory.
Also sahara client is added to stevedore configuration.

Change-Id: Ide77975026175dd9d638cb4640925bfd3eade40a
Implements: blueprint sahara-as-heat-resource

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ heat.clients =
     neutron = heat.engine.clients.os.neutron:NeutronClientPlugin
     swift = heat.engine.clients.os.swift:SwiftClientPlugin
     trove = heat.engine.clients.os.trove:TroveClientPlugin
+    sahara = heat.engine.clients.os.sahara:SaharaClientPlugin
 
 heat.constraints =
     nova.flavor = heat.engine.resources.server:FlavorConstraint
