--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ python-heatclient>=0.2.9
 python-keystoneclient>=0.9.0
 python-neutronclient>=2.3.5,<3
 python-novaclient>=2.17.0
+python-saharaclient>=0.6.0
 python-swiftclient>=2.0.2
 python-troveclient>=1.0.4
 PyYAML>=3.1.0
