Sync oslo-incubator.middleware module
This syncing has contained oslo-incubator.middleware module
to get capability of x-openstack-request-id.

Change-Id: I8e3b7d23bc1def705a0399bbd5015241a0fba8b1
Partial-Bug: #1324065

--- a/openstack-common.conf
+++ b/openstack-common.conf
@@ -27,6 +27,7 @@ module=threadgroup
 module=timeutils
 module=uuidutils
 module=versionutils
+module=middleware
 
 # The base module to hold the copy of openstack.common
 base=heat
