Sync oslo incubator
Sync oslo at c306bc19150fe6e58b088a713c8f45ba4c693496 to help
oslo.messaging transition. It also fixes how the oslo middleware module
is included, and remove the deprecated test module.

Change-Id: I2b44ba24e5a3445db6ffb9c56089ae282f3620b1

--- a/openstack-common.conf
+++ b/openstack-common.conf
@@ -22,12 +22,12 @@ module=processutils
 module=rpc
 module=service
 module=strutils
-module=test
 module=threadgroup
 module=timeutils
 module=uuidutils
 module=versionutils
-module=middleware
+module=middleware.base
+module=middleware.request_id
 
 # The base module to hold the copy of openstack.common
 base=heat
